eicb-p1/src/test/testcases/errors/p1_public/task_priv_6_wrong_default_impl_eicb/missing_RPAREN_func_err.syn.mavl
function int increment(int i, int j{
    i = (true ? 1 : 0);
    j = (true ? 1 : 0);
    return i;
}